--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.1",
     "mysql2": "^3.11.5",
     "pug": "^2.0.3",
+    "sequelize": "^6.37.5",
     "uuid": "^11.0.3"
   }
 }
