--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "connect-mongodb-session": "^5.0.0",
+    "dotenv": "^16.4.7",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
@@ -24,6 +25,7 @@
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.1",
     "mysql2": "^3.11.5",
+    "nodemailer": "^6.9.16",
     "pug": "^2.0.3",
     "sequelize": "^6.37.5",
     "uuid": "^11.0.3"
