add stripe payment to the ecommerce

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemailer": "^6.9.16",
     "pug": "^2.0.3",
     "sequelize": "^6.37.5",
+    "stripe": "^17.5.0",
     "uuid": "^11.0.3"
   }
 }
